[package]
name = "ariel-os-mqttsn-async"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../ariel-os", features = ["udp"] }
ariel-os-debug = { workspace = true }
ariel-os-utils = { workspace = true }
ariel-os-embassy = { workspace = true }
embassy-futures = { workspace = true }
embedded-nal-async = "0.8"
embassy-net = { workspace = true, features = [
    "udp",
    "proto-ipv4",
    "proto-ipv6",
] }
embassy-sync.workspace = true
embassy-executor = { workspace = true, default-features = false }
embedded-io-async = "0.6.1"
bilge = "0.2.0"
arbitrary-int = "1.3.0"
heapless = { workspace = true }

[features]
## Enables `defmt` as logging facade.
defmt = ["ariel-os-debug/defmt"]
## Enables `log` as logging facade.
log = ["ariel-os-debug/log"]

#[dev-dependencies]
#embedded-test = { workspace = true }
#
#[[bin]]
#name = "mqtt-sn-client"
#harness = false
