[package]
name = "ariel-os-mqttsn"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
embassy-futures = { workspace = true }
ariel-os = { path = "../ariel-os", features = ["udp"] }
embedded-io-async = "0.6.1"
embedded-nal-async = "0.8"
embassy-net = { workspace = true, features = [
    "udp",
    "proto-ipv4",
    "proto-ipv6",
] }
embassy-sync.workspace = true
ariel-os-embassy = { workspace = true }
log = "0.4.25"
bilge = "0.2.0"
arbitrary-int = "1.3.0"

#[dev-dependencies]
#embedded-test = { workspace = true }
#
#[[bin]]
#name = "mqtt-sn-client"
#harness = false
